SERVER-41279 Eliminate failed plans from consideration during query planning